--- a/Views/Modulo/Delete.cshtml
+++ b/Views/Modulo/Delete.cshtml
@@ -1,69 +1,70 @@
-@model webmva.Models.Modulo 
-@{ ViewData["Title"] = "Delete"; 
-List<string> progetti = ViewBag.Progetti;
-System.Console.WriteLine(progetti.Count.ToString());
+@model webmva.Models.Modulo
+@{ ViewData["Title"] = "Delete";
+    List<string> progetti = ViewBag.Progetti;
+    System.Console.WriteLine(progetti.Count.ToString());
 }
 <br>
-  <div class="container">
-<h2><em>Sei sicuro di voler cancellare </em><strong>@Html.DisplayFor(model => model.Nome)?</strong></h2>
-<hr />
-@if(progetti.Count != 0)
-{
-<div class="col-md-12">
-  <h3  style="color: red"><strong>@Html.DisplayFor(model => model.Nome)</strong><em> si trova in: </em>
-  @foreach(var item in progetti){
-   <strong>
-    @item 
-   </strong>                                
-  } </h3>
-</div>
-<hr />  
-
-}
-<div class="col-md-12">
-    <form asp-action="Delete">
-       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="ID" />
-        <div class="row panel panel-default panel-body">
-                 <!--<div class="form-group">-->
-                    <div class="col-md-12">
-                        <!--vedere l'elenco puntato-->
-                        <dl class="dl-horizontal">
-                            <div class="col-sm-9" style="margin:5ex; float:none">
-                                            <div class="form-group row">
-                                                <h4 >Nome Modulo</h4><hr />
-                                                <dd>  @Html.DisplayFor(model => model.Nome)
-                                            </dd>
-
+<div class="container">
+    <h2><em>Sei sicuro di voler cancellare </em><strong>@Html.DisplayFor(model => model.Nome)?</strong></h2>
+    <hr />
+    @if (progetti.Count != 0)
+    {
+        <div class="col-md-12">
+            <h3 style="color: red">
+                <strong>@Html.DisplayFor(model => model.Nome)</strong><em> si trova in: </em>
+                @foreach (var item in progetti)
+                {
+                    <strong>
+                        @item
+                    </strong>
+                }
+            </h3>
+        </div>
+        <hr />
+    }
+    <div class="col-md-12">
+        <form asp-action="Delete">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ID" />
+            <div class="row panel panel-default panel-body">
+                <!--<div class="form-group">-->
+                <div class="col-md-12">
+                    <!--vedere l'elenco puntato-->
+                    <dl class="dl-horizontal">
+                        <div class="col-sm-9" style="margin:5ex; float:none">
+                            <div class="form-group row">
+                                <h4>Nome Modulo</h4><hr />
+                                <dd>
+                                    @Html.DisplayFor(model => model.Nome)
+                                </dd>
                             </div>
+                        </div>
+                        <div class="col-sm-9" style="margin:5ex;  float:none">
+                            <div class="form-group row">
+                                <h4>Tipo</h4><hr />
+                                <dd>
+                                    @Html.DisplayFor(model => model.Applicazione)
+                                </dd>
                             </div>
-                            <div class="col-sm-9" style="margin:5ex;  float:none">
-                                            <div class="form-group row">
-                                                <h4 >Tipo</h4><hr />
-                                                <dd>  @Html.DisplayFor(model => model.Applicazione)
-                                            </dd>
-
-                             </div>
-                             </div>
-                             <div class="col-sm-9" style="margin:5ex;  float:none">
-                                            <div class="form-group row">
-                                                <h4 >Comando</h4><hr />
-                                                <dd>  @Html.DisplayFor(model => model.Comando)
-                                            </dd>
-
-                             </div>
-                            
-                        </dl>
+                        </div>
+                        <div class="col-sm-9" style="margin:5ex;  float:none">
+                            <div class="form-group row">
+                                <h4>Comando</h4><hr />
+                                <dd>
+                                    @Html.DisplayFor(model => model.Comando)
+                                </dd>
+                            </div>
+                    </dl>
                     <!--</div>-->
                 </div>
-                 <div class="col-xs-6 col-sm-offset-5 text-right">
-                     <br>
+                <div class="col-xs-6 col-sm-offset-5 text-right">
+                    <br>
                     <div class="form-group">
                         <input type="submit" class="btn btn-default" asp-action="Delete" asp-route-id="@Model.ID" value="Cancella"> &nbsp;&nbsp;|
                         <a asp-action="Index">  Torna alla lista</a>
                     </div>
                 </div>
             </div>
-            </form>
-        </div>   
+        </form>
+    </div>
 </div>
