--- a/Views/Progetto/Run.cshtml
+++ b/Views/Progetto/Run.cshtml
@@ -2,22 +2,23 @@
 @{ ViewData["Title"] = "Risultato"; }
 <br>
 <div class="container">
-<h2><em>Report</em><strong>  @Html.DisplayFor(model => model.NomeProgetto)</strong></h2>
-  <a  class="btn btn-default" > Scarica formato</a>   
-  <hr/>
-@foreach(var element in @Model.risultati)
-{
-<div class="panel panel-default">
-  <div class="panel-heading">
-<h4>Modulo @element.Key</h4></div>
-<div class="panel-body">
-    @{string[] risultato= element.Value.Split(Environment.NewLine);}
-    @for(int i=0; i<risultato.Length; i++){
-        @risultato[i]
-        <br />
+    <h2><em>Report</em><strong>  @Html.DisplayFor(model => model.NomeProgetto)</strong></h2>
+    <a class="btn btn-default"> Scarica formato</a>
+    <hr />
+    @foreach (var element in @Model.risultati)
+    {
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4>Modulo @element.Key</h4>
+            </div>
+            <div class="panel-body">
+                @{string[] risultato = element.Value.Split(Environment.NewLine);}
+                @for (int i = 0; i < risultato.Length; i++)
+                {
+                    @risultato[i]
+                    <br />
+                }
+            </div>
+        </div>
     }
-    </div>
-</div>
-}
-
 </div>
